--- a/part2_hls4ml.ipynb
+++ b/part2_hls4ml.ipynb
@@ -152,7 +152,8 @@
     "q_hls_model = hls4ml.converters.convert_from_keras_model(q_autoencoder,\n",
     "                                                         hls_config=config,\n",
     "                                                         backend='VivadoAccelerator',\n",
-    "                                                         output_dir='qkeras_ae_pynq',\n",
+    "                                                         output_dir='\n",
+    "                                                         ',\n",
     "                                                         board='pynq-z2')\n",
     "q_hls_model.model.optimizer.OutputRoundingSaturationMode.layers = []                                                     \n",
     "q_hls_model.compile()\n",
