--- a/part1_ADmodel.ipynb
+++ b/part1_ADmodel.ipynb
@@ -65,7 +65,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "Let's prepare the data! For simplicity, we'll only use a million of the background events. We also flatten the 2D grid into a 1D array to prepare feeding it into a dense network, and split the training data into train/validation/test sets: "
+    "Let's prepare the data!\n",
+    "Having very different numerical ranges for the input features, as in this case where $p_T$, $\\eta$ and $\\phi$ have a very diffent mean, makes it difficult for the network to converge. We will therefore standardize the $p_T$.  Also, when there is no lepton present in the event, the values will be zero padded. That means there is an unnatural number of zero entries in the $p_T$. For a real use case, the loss should be rewritten as to not take zero entries into account. Ideally we would also deal with the periodicity of phi etc. Details on the best procedure for preprccesing can be found in [this paper](https://arxiv.org/abs/2108.03986). In the interest of time, we'll only do the $p_T$ scaling.\n",
+    "\n",
+    "In addition, we also flatten the 2D grid into a 1D array to prepare feeding it into a dense network, and split the training data into train/validation/test sets: "
    ]
   },
   {
@@ -77,7 +80,7 @@
     "import h5py\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "nbkg_events = None #Depending how much time you have, you can use all of this data or only a fraction\n",
     "# read BACKGROUND data and shuffle it in preparation for training. This takes a while so I've done it in advance!\n",
@@ -86,6 +89,8 @@
     "    print(\"Data shape = (N samples, N particles, N features) = \",full_data.shape)\n",
     "    np.random.shuffle(full_data)\n",
     "    if nbkg_events: full_data = full_data[:nbkg_events,:,:]\n",
+    "    pt_scaler = StandardScaler()\n",
+    "    full_data[:,:,0] = pt_scaler.fit_transform(full_data[:,:,0])\n",
     "    \n",
     "        \n",
     "# define training, test and validation datasets\n",
@@ -107,6 +112,7 @@
     "    \n",
     "with h5py.File('data/Ato4l_lepFilter_13TeV.h5', 'r') as file:\n",
     "    signal_data = file['Particles'][:,:,:-1]\n",
+    "    signal_data[:,:,0] = pt_scaler.transform(signal_data[:,:,0])\n",
     "    signal_data = signal_data.reshape(signal_data.shape[0],input_shape)\n",
     "with h5py.File('Ato4l_dataset.h5', 'w') as h5f2:\n",
     "    h5f2.create_dataset('Data', data = signal_data)        \n"
@@ -117,18 +123,6 @@
    "metadata": {},
    "source": [
     "You  now have two new files in your reposity, `bkg_dataset.h5` and `Ato4l_dataset.h5` which contains your train/test/val data to train the autoencoder, as well as a test data to check your performance on a New Physics signal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "files = os.listdir('.')\n",
-    "print(files)"
    ]
   },
   {
@@ -150,7 +144,9 @@
     "    X_val = np.array(file['X_val'])\n",
     "    \n",
     "with h5py.File('Ato4l_dataset.h5', 'r') as file:\n",
-    "    signal_test_data = np.array(file['Data'])"
+    "    signal_test_data = np.array(file['Data'])\n",
+    "    \n",
+    " "
    ]
   },
   {
@@ -170,15 +166,15 @@
     "axs[0].hist(X_train[:,3],bins=100,label=r'Background',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
     "axs[0].hist(signal_test_data[:,3],bins=100,label=r'Signal',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
     "axs[0].semilogy()\n",
-    "axs[0].set(xlabel=u'Leading electron $p_{T}$ (GeV)', ylabel='A.U')\n",
+    "axs[0].set(xlabel=u'Leading e/$\\gamma$ $p_{T}$ ( Norm. GeV)', ylabel='A.U')\n",
     "axs[0].legend(loc='best',frameon=False, ncol=1,fontsize='large')\n",
     "\n",
     "axs[1].hist(X_train[:,15],bins=100,label=r'Background',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
     "axs[1].hist(signal_test_data[:,15],bins=100,label=r'Signal',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
-    "axs[1].set(xlabel=u'Leading muon $p_{T}$ (GeV)', ylabel='A.U')\n",
+    "axs[1].set(xlabel=u'Leading muon $p_{T}$ (Norm. GeV)', ylabel='A.U')\n",
     "axs[1].semilogy()\n",
     "axs[1].legend(loc='best',frameon=False, ncol=1,fontsize='large')\n",
-    "print(signal_test_data[3])"
+    "print(\"Example data (1,57):\",signal_test_data[3])"
    ]
   },
   {
@@ -209,8 +205,8 @@
     "latent_dim = 3\n",
     "#encoder\n",
     "inputArray = Input(shape=(input_shape))\n",
-    "x = BatchNormalization()(inputArray)\n",
-    "x = Dense(32, kernel_initializer=tf.keras.initializers.HeUniform())(x)\n",
+    "#x = BatchNormalization()(inputArray) #Only use this if you're not standardizing the pT\n",
+    "x = Dense(32, kernel_initializer=tf.keras.initializers.HeUniform())(inputArray)\n",
     "x = BatchNormalization()(x)\n",
     "x = LeakyReLU(alpha=0.3)(x)\n",
     "x = Dense(16, kernel_initializer=tf.keras.initializers.HeUniform())(x)\n",
@@ -254,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = True #If you have a pre-trained model you can set this to false and load the other instead\n",
+    "train = False #If you have a pre-trained model you can set this to false and load the other instead\n",
     "EPOCHS = 150\n",
     "BATCH_SIZE = 1024\n",
     "\n",
@@ -300,7 +296,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then need to compute the mean-square-error, which will be our final discriminating variable"
+    "Let's see how well the network reconstructs the transverse momentum of the leptons!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1,2,figsize=(16,8))\n",
+    "fig.suptitle('Real data versus reconsructed data')\n",
+    "axs[0].hist(X_test[:,3],bins=100,label=r'Real data',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
+    "axs[0].hist(bkg_prediction[:,3],bins=100,label=r'Predicted',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
+    "axs[0].semilogy()\n",
+    "axs[0].set(xlabel=u'Leading e/$\\gamma$ $p_{T}$ ( Norm. GeV)', ylabel='A.U')\n",
+    "axs[0].legend(loc='best',frameon=False, ncol=1,fontsize='large')\n",
+    "\n",
+    "axs[1].hist(X_test[:,15],bins=100,label=r'Real data',histtype='step', linewidth=2, facecolor='none', edgecolor='green',fill=True,density=True)\n",
+    "axs[1].hist(bkg_prediction[:,15],bins=100,label=r'Predicted',histtype='step', linewidth=2, facecolor='none', edgecolor='orchid',fill=True,density=True)\n",
+    "axs[1].set(xlabel=u'Leading muon $p_{T}$ (Norm. GeV)', ylabel='A.U')\n",
+    "axs[1].semilogy()\n",
+    "axs[1].legend(loc='best',frameon=False, ncol=1,fontsize='large')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reconstructed $p_T$ has an unphysical tail below zero. For a real usecase, we would force the output to be positive for that column, as well as treat the zero-padded cases differently in the loss.\n",
+    "To keep it short, we won't do that now, but you can read more about it [here](https://arxiv.org/abs/2108.03986)\n",
+    "\n",
+    "We then need to compute the mean-square-error, which will be our final discriminating variable. This you would need to write custom if applying the changes we mention above:"
    ]
   },
   {
@@ -334,8 +361,8 @@
     "bin_size=100\n",
     "\n",
     "plt.figure(figsize=(8,8))\n",
-    "plt.hist(mse_sm, bins=bin_size, label=\"SM Background\", density = True, histtype='step', fill=False, edgecolor='green', linewidth=1.5)\n",
-    "plt.hist(mse_bsm, bins=bin_size, label=\"Leptoquark\", density = True, histtype='step', fill=False, edgecolor='orchid', linewidth=1.5)\n",
+    "n, bins, patches =plt.hist(mse_bsm, bins=bin_size, label=\"Leptoquark\", density = True, histtype='step', fill=False, edgecolor='orchid', linewidth=1.5,range=[0,200])\n",
+    "n_, bins_, patches_ =plt.hist(mse_sm, bins=bin_size, label=\"SM Background\", density = True, histtype='step', fill=False, edgecolor='green', linewidth=1.5,range=[0,200])\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Mean-squared-error\")\n",
     "plt.ylabel(\"Probability (a.u.)\")\n",
@@ -394,6 +421,7 @@
    "metadata": {},
    "source": [
     "## Model compression\n",
+    "<img src=\"images/nmi_qkeras_hls4ml.jpeg\" alt=\"hls4ml and qkeras\" width=\"200\" img align=\"left\"/>\n",
     "\n",
     "Now, there is absolutely no way anyone would let you deploy this model on an FPGA in the trigger. It will use far too many resources! Luckily, as we discussed in the lecture, there are some cheap tricks you can perform to compress the model. These are pruning and quantization-aware-training and both are very easily implemented. Let's have a look.\n",
     "\n",
@@ -410,35 +438,35 @@
     "\n",
     "#encoder\n",
     "inputArray = Input(shape=(input_shape))\n",
-    "x = BatchNormalization()(inputArray)\n",
+    "# x = BatchNormalization()(inputArray)\n",
     "x = QDense(32, kernel_initializer=tf.keras.initializers.HeUniform(),\n",
-    "               kernel_quantizer='quantized_bits(10,1,1, alpha=1.0)',\n",
-    "               bias_quantizer='quantized_bits(10,1,1, alpha=1.0)')(x)\n",
+    "               kernel_quantizer='quantized_bits(8,3,1, alpha=1.0)',\n",
+    "               bias_quantizer='quantized_bits(8,3,1, alpha=1.0)')(inputArray)\n",
     "x = BatchNormalization()(x)\n",
-    "x = QActivation('quantized_relu(bits=10)')(x)\n",
+    "x = QActivation('quantized_relu(bits=8)')(x)\n",
     "x = QDense(16, kernel_initializer=tf.keras.initializers.HeUniform(),\n",
-    "               kernel_quantizer='quantized_bits(10,1,1, alpha=1.0)',\n",
-    "               bias_quantizer='quantized_bits(10,1,1, alpha=1.0)')(x)\n",
+    "               kernel_quantizer='quantized_bits(8,3,1, alpha=1.0)',\n",
+    "               bias_quantizer='quantized_bits(8,3,1, alpha=1.0)')(x)\n",
     "x = BatchNormalization()(x)\n",
-    "x = QActivation('quantized_relu(bits=10)')(x)\n",
+    "x = QActivation('quantized_relu(bits=8)')(x)\n",
     "encoder = QDense(latent_dim, kernel_initializer=tf.keras.initializers.HeUniform(),\n",
-    "               kernel_quantizer='quantized_bits(10,1,1, alpha=1.0)',\n",
-    "               bias_quantizer='quantized_bits(10,1,1, alpha=1.0)', name='bottleneck')(x)\n",
+    "               kernel_quantizer='quantized_bits(16,6,1, alpha=1.0)',\n",
+    "               bias_quantizer='quantized_bits(16,6,1, alpha=1.0)', name='bottleneck')(x)\n",
     "\n",
     "#decoder\n",
     "x = QDense(16, kernel_initializer=tf.keras.initializers.HeUniform(),\n",
-    "               kernel_quantizer='quantized_bits(10,1,1, alpha=1.0)',\n",
-    "               bias_quantizer='quantized_bits(10,1,1, alpha=1.0)')(encoder)\n",
+    "               kernel_quantizer='quantized_bits(8,3,1, alpha=1.0)',\n",
+    "               bias_quantizer='quantized_bits(8,3,1, alpha=1.0)')(encoder)\n",
     "x = BatchNormalization()(x)\n",
-    "x = QActivation('quantized_relu(bits=10)')(x)\n",
+    "x = QActivation('quantized_relu(bits=8)')(x)\n",
     "x = QDense(32, kernel_initializer=tf.keras.initializers.HeUniform(),\n",
-    "               kernel_quantizer='quantized_bits(10,1,1, alpha=1.0)',\n",
-    "               bias_quantizer='quantized_bits(10,1,1, alpha=1.0)')(x)\n",
+    "               kernel_quantizer='quantized_bits(8,3,1, alpha=1.0)',\n",
+    "               bias_quantizer='quantized_bits(8,3,1, alpha=1.0)')(x)\n",
     "x = BatchNormalization()(x)\n",
-    "x = QActivation('quantized_relu(bits=10)')(x)\n",
+    "x = QActivation('quantized_relu(bits=8)')(x)\n",
     "decoder = QDense(input_shape, kernel_initializer=tf.keras.initializers.HeUniform(),\n",
-    "               kernel_quantizer='quantized_bits(10,1,1, alpha=1.0)',\n",
-    "               bias_quantizer='quantized_bits(10,1,1, alpha=1.0)')(x)\n",
+    "               kernel_quantizer='quantized_bits(16,6,1, alpha=1.0)',\n",
+    "               bias_quantizer='quantized_bits(16,6,1, alpha=1.0)')(x)\n",
     "\n",
     "#create autoencoder\n",
     "q_autoencoder = Model(inputs = inputArray, outputs=decoder)\n",
@@ -449,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Easy as that! Let's add some pruning on top, 30% sparsity (removing 30% of the weights). Let's make sure to skip our latent dimension!"
+    "Easy as that! Let's add some pruning on top, 50% sparsity (removing 50% of the weights). Let's make sure to skip our latent dimension!"
    ]
   },
   {
@@ -463,13 +491,14 @@
     "from tensorflow_model_optimization.sparsity.keras import strip_pruning\n",
     "\n",
     "def pruneFunction(layer):\n",
-    "    pruning_params = {'pruning_schedule': pruning_schedule.PolynomialDecay(initial_sparsity=0.05,final_sparsity=0.30, begin_step=1000, end_step=8000, frequency=100)}\n",
+    "    pruning_params = {'pruning_schedule': pruning_schedule.PolynomialDecay(initial_sparsity=0.05,final_sparsity=0.50, begin_step=0, end_step=100, frequency=100)}\n",
     "    if isinstance(layer, tf.keras.layers.Dense) and layer.name!='bottleneck':\n",
     "      return tfmot.sparsity.keras.prune_low_magnitude(layer, **pruning_params)  \n",
     "    return layer\n",
     "\n",
     "q_autoencoder.load_weights('baseline_ae_weights_only.h5')\n",
-    "q_autoencoder = tf.keras.models.clone_model( q_autoencoder, clone_function=pruneFunction)\n"
+    "qp_autoencoder = tf.keras.models.clone_model( q_autoencoder, clone_function=pruneFunction)\n",
+    "qp_autoencoder.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.00001), loss='mse')"
    ]
   },
   {
@@ -478,9 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_autoencoder.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.00001), loss='mse')\n",
-    "\n",
-    "train = True\n",
+    "train = False\n",
     "EPOCHS = 150\n",
     "BATCH_SIZE = 1024\n",
     "\n",
@@ -489,18 +516,22 @@
     "callbacks=[]\n",
     "callbacks.append(ReduceLROnPlateau(monitor='val_loss',  factor=0.1, patience=2, verbose=1, mode='auto', min_delta=0.0001, cooldown=2, min_lr=1E-6))\n",
     "callbacks.append(TerminateOnNaN())\n",
-    "callbacks.append(tf.keras.callbacks.EarlyStopping(monitor='val_loss',verbose=1, patience=10, restore_best_weights=True))\n",
+    "callbacks.append(tf.keras.callbacks.EarlyStopping(monitor='val_loss',verbose=1, patience=10, restore_best_weights=False))\n",
     "callbacks.append(pruning_callbacks.UpdatePruningStep())\n",
     "if train:\n",
     "        \n",
-    "    history = q_autoencoder.fit(X_train, X_train, epochs = EPOCHS, batch_size = BATCH_SIZE,\n",
+    "    history = qp_autoencoder.fit(X_train, X_train, epochs = EPOCHS, batch_size = BATCH_SIZE,\n",
     "                  validation_data=(X_val, X_val),\n",
     "                  callbacks=callbacks)\n",
     "    # Save the model\n",
-    "    q_autoencoder.save('qkeras_ae.h5')\n",
+    "    qp_autoencoder = strip_pruning(qp_autoencoder)\n",
+    "    qp_autoencoder.save('qkeras_ae.h5')\n",
     "    \n",
     "else:\n",
-    "    q_autoencoder = tf.keras.models.load_model('qkeras_ae.h5')\n",
+    "    from qkeras.utils import _add_supported_quantized_objects\n",
+    "    co = {}; _add_supported_quantized_objects(co)\n",
+    "\n",
+    "    qp_autoencoder = tf.keras.models.load_model('qkeras_ae.h5',custom_objects=co)\n",
     "    "
    ]
   },
@@ -508,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's compare the performance to the floating point precision, unpruned model:"
+    "Let's quickly check that the pruning worked and 30% of the weights are indeed 0!"
    ]
   },
   {
@@ -517,8 +548,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bkg_prediction = q_autoencoder.predict(X_test)\n",
-    "signal_prediction = q_autoencoder.predict(signal_test_data)\n",
+    "def doWeights(model):\n",
+    "\n",
+    "    allWeightsByLayer = {}\n",
+    "    for layer in model.layers:\n",
+    "        if (layer._name).find(\"batch\")!=-1 or len(layer.get_weights())<1:\n",
+    "            continue \n",
+    "        weights=layer.weights[0].numpy().flatten()  \n",
+    "        allWeightsByLayer[layer._name] = weights\n",
+    "        print('Layer {}: % of zeros = {}'.format(layer._name,np.sum(weights==0)/np.size(weights)))\n",
+    "\n",
+    "    labelsW = []\n",
+    "    histosW = []\n",
+    "\n",
+    "    for key in reversed(sorted(allWeightsByLayer.keys())):\n",
+    "        labelsW.append(key)\n",
+    "        histosW.append(allWeightsByLayer[key])\n",
+    "\n",
+    "    fig = plt.figure(figsize=(10,10))\n",
+    "    bins = np.linspace(-1.5, 1.5, 50)\n",
+    "    plt.hist(histosW,bins,histtype='stepfilled',stacked=True,label=labelsW, edgecolor='black')\n",
+    "    plt.legend(frameon=False,loc='upper left')\n",
+    "    plt.ylabel('Number of Weights')\n",
+    "    plt.xlabel('Weights')\n",
+    "    plt.figtext(0.2, 0.38,model._name, wrap=True, horizontalalignment='left',verticalalignment='center')\n",
+    "    \n",
+    "doWeights(autoencoder) \n",
+    "doWeights(qp_autoencoder) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indeed, a huge spike at zero for the pruned model! Let's compare the performance to the floating point precision, unpruned model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bkg_prediction = qp_autoencoder.predict(X_test)\n",
+    "signal_prediction = qp_autoencoder.predict(signal_test_data)\n",
     "\n",
     "# compute loss value of input data versus AE reconstructed data\n",
     "q_mse_sm = mse_loss(X_test, bkg_prediction.astype(np.float32)).numpy()\n",
@@ -553,6 +626,7 @@
     "plt.legend(loc='center right')\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
+    "plt.ylim(0.001,1)\n",
     "plt.plot(np.linspace(0, 1),np.linspace(0, 1), '--', color='0.75')\n",
     "plt.axvline(0.00001, color='orange', linestyle='dashed', linewidth=2) # threshold value for measuring anomaly detection efficiency\n",
     "plt.show()"
@@ -562,15 +636,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OUCH! We really took a hit. Well, whatever. Let's tune that another time and now try deploying these models!!"
+    "Take a moment to appreciate what an absolutely fantastic result this is! We can reduce the numerical precision of the model from floating point 32 representation to 8-bit fixed point precision, remove 50% of the weights *and still get the same performance*!! This is a crucial, and absolutely neccessary, part of making deep neural networks in particle detector data aquisition systems a reality (also, note that AUC is not a good metric for trigger applications, where you typically operate at very low false positive rates of 10E-5)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
